vlib/v/checker/tests/comptime_selector_expr_type_err.vv
module main

pub struct Row {
pub mut:
	value string
}

fn main() {
	a := []Row{}
	for i in a {
		$for field in Row.fields {
			println('field $i: ' + a.$(field.name).str() )
		}
	}
}
